--- a/src/components/settings.component.html
+++ b/src/components/settings.component.html
@@ -12,6 +12,7 @@
       <button (click)="setTab('store')" class="px-4 py-2 text-sm font-medium border-b-2 whitespace-nowrap transition-colors" [class.border-yellow-500]="currentTab() === 'store'" [class.text-white]="currentTab() === 'store'" [class.border-transparent]="currentTab() !== 'store'" [class.text-gray-400]="currentTab() !== 'store'">{{ languageService.translate('settings.tabs.store') }}</button>
       <button (click)="setTab('network')" class="px-4 py-2 text-sm font-medium border-b-2 whitespace-nowrap transition-colors" [class.border-teal-500]="currentTab() === 'network'" [class.text-white]="currentTab() === 'network'" [class.border-transparent]="currentTab() !== 'network'" [class.text-gray-400]="currentTab() !== 'network'">{{ languageService.translate('settings.tabs.network') }}</button>
       <button (click)="setTab('integrations')" class="px-4 py-2 text-sm font-medium border-b-2 whitespace-nowrap transition-colors" [class.border-indigo-500]="currentTab() === 'integrations'" [class.text-white]="currentTab() === 'integrations'" [class.border-transparent]="currentTab() !== 'integrations'" [class.text-gray-400]="currentTab() !== 'integrations'">{{ languageService.translate('settings.tabs.integrations') }}</button>
+      <button (click)="setTab('roadmap')" class="px-4 py-2 text-sm font-medium border-b-2 whitespace-nowrap transition-colors" [class.border-purple-500]="currentTab() === 'roadmap'" [class.text-white]="currentTab() === 'roadmap'" [class.border-transparent]="currentTab() !== 'roadmap'" [class.text-gray-400]="currentTab() !== 'roadmap'">{{ languageService.translate('settings.tabs.roadmap') }}</button>
     </div>
   </div>
 
@@ -187,6 +188,9 @@
         <div class="space-y-8">
             <app-telegram-bot></app-telegram-bot>
         </div>
+      }
+      @case('roadmap') {
+        <app-roadmap></app-roadmap>
       }
     }
   </div>
