--- a/src/components/user-management.component.html
+++ b/src/components/user-management.component.html
@@ -1,4 +1,3 @@
-
 <div class="bg-gray-800 rounded-lg shadow-xl border border-gray-700 p-6">
       <div class="flex justify-between items-center mb-6">
         <h2 class="text-2xl font-bold text-white">{{ languageService.translate('users.title') }}</h2>
@@ -38,7 +37,9 @@
                     <div class="flex flex-col gap-1">
                         <div class="flex items-center gap-2">
                             <span class="flex h-2 w-2 relative">
-                                <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75" *ngIf="user.currentConnections > 0"></span>
+                                @if(user.currentConnections > 0) {
+                                  <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
+                                }
                                 <span class="relative inline-flex rounded-full h-2 w-2" 
                                       [class.bg-green-500]="user.currentConnections > 0"
                                       [class.bg-gray-500]="user.currentConnections === 0"></span>
